Fixed text that would not wrap

--- a/client/src/components/stylesheets/PreviewForm.css
+++ b/client/src/components/stylesheets/PreviewForm.css
@@ -17,9 +17,6 @@
     white-space: pre-wrap;
 }
 
-.textfield-group {
-    text-align: left;
-}
 
 .third-step {
     width: 100%;
